fixed title on small devices

--- a/styles/less/main.less
+++ b/styles/less/main.less
@@ -304,6 +304,9 @@ nav {
         position: absolute;
         width: 20%;
         left: 40%;
+        @media @mq-small{
+            left: 25%;
+        }
         text-align: center;
         //float: left;
         //text-align: left;
